--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/api/api_server" }
+      { "source": "/(.*)", "destination": "/api/main" }
     ]
 }
