--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-httpx[brotli,http2]
-PySide6-Essentials>=6.8.0
-mutagen
+flask
 diskcache
-charset-normalizer
 pyaes
-psutil
-pyobjc-framework-Cocoa; sys_platform == 'darwin'
-fastapi>=0.104.0
+httpx[brotli,http2]
